# m-explore

./: .clang-format  .gitignore  LICENSE  README.md
explore/: CHANGELOG.rst  CMakeLists.txt  package.xml
explore/doc/: architecture.dia  configuration.md  quick-start.txt  wiki_doc.txt
explore/include/explore/: costmap_client.h  costmap_tools.h  explore.h  explore_frontier.h  frontier_search.h  loop_closure.h
explore/launch/: explore.launch  explore_costmap.launch
explore/msg/: ExploreFeedback.msg  ExploreGoal.msg  ExploreState.msg
explore/src/: costmap_client.cpp  explore.cpp  explore_frontier.cpp  frontier_search.cpp  loop_closure.cpp  navfn_ros.cpp
map_merge/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml
map_merge/doc/: architecture.dia  wiki_doc.txt
map_merge/include/: map_merge.h  map_merging.hpp
map_merge/include/combine_grids/: estimate_rigid_transform.h  estimate_transform.h  features_matcher.h  grid_compositor.h  grid_warper.h  merging_pipeline.h  transform_estimator.h
map_merge/include/map_merge/: map_merge.h
map_merge/include/occupancy_grid_utils/: combine_grids.h  coordinate_conversions.h
map_merge/launch/: from_map_server.launch  map_merge.launch  map_merge.rviz
map_merge/launch/experiments/: 3-robots.ttt.launch  demo-scene-1.ttt.launch  demo-scene-orientation-exp.ttt.launch
map_merge/src/: combine_grids.cpp  coordinate_conversions.cpp  map_merge.cpp  map_merging.cpp
map_merge/src/combine_grids/: estimate_rigid_transform.cpp  estimate_transform.cpp  estimation_internal.h  features_matcher.cpp  grid_compositor.cpp  grid_warper.cpp  merging_pipeline.cpp  transform_estimator.cpp
map_merge/src/opencv_backport/: NOTE.md
map_merge/src/opencv_backport/calib3d/: calib3d.hpp  levmarq.cpp  precomp.hpp  ptsetreg.cpp
map_merge/src/opencv_backport/stitching/: matchers.cpp  matchers.hpp  motion_estimators.cpp  motion_estimators.hpp
map_merge/test/: test_grid_utils.cpp  test_merging_pipeline.cpp  testing_helpers.h
