<?xml version="1.0"?>
<package>
  <name>map_merge</name>
  <version>0.0.0</version>
  <description>merging multiple maps with knowledge of the initial relative positions of robots</description>

  <author email="laeqten@gmail.com">Jiri Horner</author>
  <author>Zhi Yan</author>
  <maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>
  <license>BSD</license>

  <!-- original project URI -->
  <!-- <url>http://www.ai.univ-paris8.fr/~yz/</url> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>occupancy_grid_utils</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>occupancy_grid_utils</run_depend>
</package>