<?xml version="1.0"?>
<package>
  <name>multirobot_map_merge</name>
  <version>1.0.0</version>

  <description>Merging multiple maps without knowledge of initial
  positions of robots.</description>

  <author email="laeqten@gmail.com">Jiri Horner</author>
  <maintainer email="laeqten@gmail.com">Jiri Horner</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/multirobot_map_merge</url>

  <!-- acknowledgements
  <author>Zhi Yan</author>
  <url>http://www.ai.univ-paris8.fr/~yz/</url>
  -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>opencv3</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>opencv3</run_depend>

  <test_depend>rosunit</test_depend>
</package>
